--- a/Lista01/ex01.html
+++ b/Lista01/ex01.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Exercício 01</title>
     <script src="ex01.js"></script>
 </head>
 <body>
-    <form action=""></form>
+    <div class="box">
+        <form class="mt-1">
+            <label for="valo1">Digite o primeiro número:</label>
+            <input type="text" id="valor1">
+            <br>
+            <label for="valor2">Digite o segundo número:</label>
+            <input type="text" id="valor2">
+            <br>
+            <button type="button" onclick="calcula()">Calcula</button>
+        </form>
+    
+        <table border="1">
+            <tr>
+                <th>Operação:</th>
+                <th>Valor:</th>
+            </tr>
+            <tr>
+                <td id="operacao1"></td>
+                <td id="resultado1"></td>
+            </tr>
+            <tr>
+                <td id="operacao2"></td>
+                <td id="resultado2"></td>
+            </tr>
+            <tr>
+                <td id="operacao3"></td>
+                <td id="resultado3"></td>
+            </tr>
+            <tr>
+                <td id="operacao4"></td>
+                <td id="resultado4"></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
